--- a/.github/workflows/publish-nightly-to-gpr.yml
+++ b/.github/workflows/publish-nightly-to-gpr.yml
@@ -1,4 +1,4 @@
-name: Push nightly to GPR
+name: "Push nightly to GPR"
 
 on:
   push:
@@ -14,7 +14,7 @@ env:
   VERSION: ''
   BRANCH: ''
   
-jobs:  
+jobs:         
   push-to-gpr:
     runs-on: ubuntu-latest  
     steps:
@@ -57,13 +57,18 @@ jobs:
           }    
 
       - name: Building library
-        run: dotnet build src -c Release -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
+        run: dotnet build src -c Release -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true /p:PublicRelease=true
 
       - name: Running unit tests
-        run: dotnet test src /nowarn:CS1591 /p:CollectCoverage=true /p:CoverletOutput=./coverage/ /p:CoverletOutputFormat=opencover /p:ExcludeByAttribute=\"Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute\" /p:UseSourceLink=true
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
+        run: dotnet test src -c Release /nowarn:CS1591
+      
+      - name: Creating library package
+        run: |
+          dotnet pack src/bunit.core/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true /p:PublicRelease=true
+          dotnet pack src/bunit.web/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true /p:PublicRelease=true
+          dotnet pack src/bunit.xunit/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true /p:PublicRelease=true
+          dotnet pack src/bunit/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true /p:PublicRelease=true
+          dotnet pack src/bunit.template/ -c Release -o ${GITHUB_WORKSPACE}/packages /p:PublicRelease=true
 
       - name: Push packages to GitHub Package Registry
         run: |
