fixed template to not break

--- a/src/bunit.template/bunit.template.csproj
+++ b/src/bunit.template/bunit.template.csproj
@@ -22,6 +22,7 @@
 		<AssemblyName>Bunit.Template</AssemblyName>
 		<RootNamespace>Bunit</RootNamespace>
 		<Deterministic>true</Deterministic>
+		<IncludeSymbols>false</IncludeSymbols>
 	</PropertyGroup>
 
 	<ItemGroup>
