--- a/src/bunit/bunit.csproj
+++ b/src/bunit/bunit.csproj
@@ -3,6 +3,7 @@
 		<TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
 		<NoBuild>true</NoBuild>
 		<IncludeBuildOutput>false</IncludeBuildOutput>
+		<IncludeSymbols>false</IncludeSymbols>
 	</PropertyGroup>
 
 	<PropertyGroup>
