Upgrading to .net rc-5

--- a/src/bunit.xunit/bunit.xunit.csproj
+++ b/src/bunit.xunit/bunit.xunit.csproj
@@ -15,7 +15,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="SourceFileFinder" Version="1.0.0-preview-1" />
+		<PackageReference Include="SourceFileFinder" Version="1.0.0" />
 		<PackageReference Include="System.Reflection.Metadata" Version="1.8.1" />
 		<PackageReference Include="xunit.assert" Version="2.4.0" />
 		<PackageReference Include="xunit.extensibility.core" Version="2.4.0" />
