--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -35,7 +35,7 @@ jobs:
           dotnet-version: '3.1.x'
       - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '5.0.100-preview.8.20417.9'
+          dotnet-version: '5.0.100-rc.1.20452.10'
       - name: DOTNET HACK
         shell: pwsh
         run: |
