Changed to <DebugType>embedded</DebugType>

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -12,6 +12,7 @@
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<EmbedUntrackedSources>true</EmbedUntrackedSources>
 		<IncludeSymbols>true</IncludeSymbols>
+		<DebugType>embedded</DebugType>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>		
 	</PropertyGroup>
 	
